# nutriscore-app

./: .gitattributes  .gitignore  README.md  aliments_quantity.parquet  app.py  config.yaml  food_toviz.parquet  nutrisc_country.parquet  pyproject.toml  requirements.txt
